# ControleUPC

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
Doc/: PRD_Sistema_Prestacao_Contas_Municipal (1).md
apps/web/: next-env.d.ts  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: PrestacaoDashboardClient.tsx  page.tsx
apps/web/src/app/importacoes/: ImportacoesClient.tsx  page.tsx
apps/web/src/components/internal/: DataPanel.tsx  (+5 more)
apps/worker/: README.md  pyproject.toml
apps/worker/app/: __init__.py  main.py  processing.py  schemas.py  services.py  supabase_client.py
docs/: 2026-06-11-handoff-controle-upc.md  20260620000100_templates_versionados.sql  adr-001-modelos-in-versionados.md  checklist-execucao-controle-upc.md  controle-upc-documento-mestre.md  decisao-visual-saas-moderno-operacional.md  design-tokens-controle-upc.md  direcao-visual-controle-upc.md  guia-tecnico-execucao-controle-upc.md  handoff-2026-06-21.md  importacao-sim.md  plano-controle-upc.md  plano-desenvolvimento-controle-upc.md  prd-execucao-controle-upc.md
docs/codex_supabase/: ARQUITETURA-SUPABASE-UNICO.md  BANCO-MODELO-INICIAL.md  Guia_Aplicacao_Supabase_Controle_UPC.docx  INDICE.md  PRD-PORTALGOV.md  PRD-PRESTACAO-CONTAS.md  PROMPTS-CODEX.md  README-IA.md
docs/superpowers/plans/: 2026-06-11-modelo-01-continuidade.md
supabase/: README.md
supabase/migrations/: 20260611000100_initial_controle_upc.sql  20260620000100_modelos_in_templates_versionados.sql  20260621000200_fk_indexes.sql
(+17 files in other folders)
